Remove LOG_DIR, since it doesn't seem to be needed